# repoxide

./: .dockerignore  .gitignore  .pinact.yaml  .tool-versions  AGENTS.md  BENCHMARKS.md  Cargo.toml  Dockerfile  IMPLEMENTATION-BLUEPRINT.md  README.md  docker-compose.yml  repoxide.config.json  typos.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: 01_feature_request.yml  02_bug_report.yml
.github/actions/repoxide/: action.yml
.github/releases/v0.1.x/: v0.1.45.md
.github/releases/v0.2.x/: v0.2.1.md  v0.2.10.md  v0.2.11.md  v0.2.12.md  v0.2.15.md  v0.2.16.md  v0.2.17.md  v0.2.2.md  v0.2.20.md  v0.2.21.md  v0.2.22.md  v0.2.23.md  v0.2.24.md  v0.2.25.md  v0.2.26.md  v0.2.28.md  v0.2.29.md  v0.2.3.md  v0.2.30.md  v0.2.32.md  v0.2.33.md  v0.2.34.md  v0.2.35.md  v0.2.36.md  v0.2.4.md  v0.2.40.md  v0.2.41.md  v0.2.5.md  v0.2.6.md  v0.2.7.md  v0.2.8.md
.github/releases/v0.3.x/: v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.3.3.md  v0.3.5.md  v0.3.6.md  v0.3.7.md  v0.3.8.md  v0.3.9.md
.github/releases/v1.x/: v1.0.0.md  v1.1.0.md  v1.10.0.md  v1.10.1.md  v1.10.2.md  v1.11.0.md  v1.2.0.md  v1.2.1.md  v1.3.0.md  v1.4.0.md  v1.4.1.md  v1.4.2.md  v1.5.0.md  v1.6.0.md  v1.6.1.md  v1.7.0.md  v1.8.0.md  v1.9.0.md  v1.9.1.md  v1.9.2.md
.github/workflows/: autofix.yml  benchmark.yml  ci.yml  claude-issue-triage.yml  docker.yml  homebrew.yml  npm-publish.yml  pack-repository.yml  release-manual.yml  schema-update.yml  test-action.yml
apps/web/: README.md
apps/web/client/: Dockerfile  package-lock.json  package.json
apps/web/client/.vitepress/: config.ts
apps/web/client/constants/: videos.ts
apps/web/client/scripts/: generateSchema.ts
apps/web/client/utils/: urlParams.ts
apps/web/server/: CHUNKED_UPLOAD.md  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml
apps/web/server/src/: error.rs  main.rs  state.rs  types.rs
apps/web/server/src/handlers/: health.rs  mod.rs  pack.rs  upload.rs  web.rs
apps/web/server/src/views/: home.rs  mod.rs
apps/web/server/src/views/components/: home.rs
apps/web/server/static/: repomix-home.css  repomix-home.js  repoxide-home.css  repoxide-home.js
crates/repomix/: Cargo.toml  README.md
crates/repomix/src/: api.rs  lib.rs  main.rs
crates/repomix/src/cli/: run.rs
crates/repomix/src/config/: loader.rs  mod.rs  schema.rs
crates/repoxide/: Cargo.toml  README.md
crates/repoxide/src/: api.rs  lib.rs  main.rs
crates/repoxide/src/cli/: args.rs  mod.rs  run.rs
crates/repoxide/src/config/: loader.rs  mod.rs  schema.rs
crates/repoxide/src/remote/: clone.rs  parse.rs
legacy/: compose.yml
legacy/repomix-ts/: README.md  package.json
legacy/repomix-ts/scripts/memory/: README.md
legacy/repoxide-ts/: Dockerfile  README.md  llms-install.md  package-lock.json  package.json  repoxide-instruction.md
legacy/repoxide-ts/browser/: CLAUDE.md  README.md  package-lock.json  package.json  wxt.config.ts
legacy/repoxide-ts/browser/entrypoints/: content.ts  styles.css
legacy/repoxide-ts/browser/tests/: repoxide-integration.test.ts
legacy/repoxide-ts/scripts/memory/: README.md  package-lock.json  package.json
legacy/repoxide-ts/src/: index.ts
legacy/repoxide-ts/src/cli/: cliReport.ts  cliRun.ts  types.ts
legacy/repoxide-ts/src/config/: configLoad.ts  configSchema.ts  defaultIgnore.ts  globalDirectory.ts
legacy/repoxide-ts/src/core/: packager.ts
legacy/repoxide-ts/src/mcp/: mcpServer.ts
legacy/repoxide-ts/src/shared/: constants.ts  errorHandle.ts  logger.ts  processConcurrency.ts  sizeParse.ts  types.ts
legacy/repoxide-ts/tests/cli/: cliRun.test.ts
legacy/repoxide-ts/tests/config/: configLoad.integration.test.ts  configLoad.test.ts  configSchema.test.ts  globalDirectory.test.ts
legacy/repoxide-ts/tests/integration-tests/: packager.test.ts
legacy/repoxide-ts/tests/mcp/: mcpServer.test.ts
legacy/repoxide-ts/tests/shared/: logger.test.ts  processConcurrency.test.ts
legacy/repoxide-ts/tests/testing/: testUtils.ts
legacy/website-server-ts/: Dockerfile  cloudbuild.yaml  package-lock.json  package.json  tsconfig.json
legacy/website-server-ts/src/: index.ts
legacy/website-server-ts/src/actions/: packAction.ts  uploadActions.ts
repomix-rs/: Cargo.toml  README.md  TO-TO.md
repomix-rs/Docs/arborium/: README.md  SWIFT_INTEGRATION.md  VUE_INTEGRATION.md
repomix-rs/src/: api.rs  lib.rs  main.rs
repomix-rs/src/cli/: args.rs  mod.rs  run.rs
repomix-rs/src/config/: loader.rs  mod.rs  schema.rs
repomix-rs/src/core/: mod.rs  packager.rs
repomix-rs/src/core/compress/: languages.rs  mod.rs  parser.rs  queries.rs  strategies.rs
repomix-rs/src/core/file/: collect.rs  mod.rs  search.rs  tree.rs
repomix-rs/src/core/metrics/: mod.rs  tokens.rs
repomix-rs/src/core/output/: generate.rs  json.rs  markdown.rs  mod.rs  plain.rs  xml.rs
repomix-rs/src/remote/: clone.rs  mod.rs  parse.rs
repomix-rs/src/shared/: error.rs  logger.rs  mod.rs
website/: compose.yml
website/client/.vitepress/: config.ts
website/client/composables/: usePackRequest.ts
website/client/src/de/: index.md
website/server/: Dockerfile
website/server-rs/: CHUNKED_UPLOAD.md  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml
website/server-rs/src/: main.rs  state.rs  types.rs
website/server/src/: index.ts
(+219 files in other folders)
