[package]
name = "repomix"
version = "0.1.0"
edition = "2021"
description = "A tool to pack repository contents to single file for AI consumption"
license = "MIT"
repository = "https://github.com/0fl01/repomix"
keywords = ["repository", "llm", "ai", "codebase-packer"]

[[bin]]
name = "repomix"
path = "src/main.rs"

[lib]
name = "repomix"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
globset = "0.4"
ignore = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Token counting
tiktoken-rs = "0.5"

# Tree-sitter for code compression (via arborium crates)
arborium-tree-sitter = "2.4.6"
arborium-rust = "2.4.6"
arborium-typescript = "2.4.6"
arborium-javascript = "2.4.6"
arborium-python = "2.4.6"
arborium-go = "2.4.6"
arborium-java = "2.4.6"
arborium-c = "2.4.6"
arborium-cpp = "2.4.6"
arborium-c-sharp = "2.4.6"
arborium-ruby = "2.4.6"
arborium-php = "2.4.6"
arborium-css = "2.4.6"
arborium-vue = "2.4.6"
arborium-swift = "2.4.6"
streaming-iterator = "0.1"

# Encoding detection
encoding_rs = "0.8"
chardetng = "0.1"

# Terminal output
colored = "2"

# Platform directories
dirs = "5"

# Parallelism
rayon = "1"

# Error handling
anyhow = "1"

# Temporary files
tempfile = "3"

# URL parsing
url = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
