[package]
name = "repomix-server"
version = "0.1.0"
edition = "2021"

[dependencies]
repomix = { path = "../../../crates/repomix" }
axum = { version = "0.8", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "timeout", "limit", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
zip = "2"
bytes = "1"
anyhow = "1"
maud = "0.27"
